--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qemu-server (6.4-1rpve2) pve; urgency=medium
+
+  * ARM support
+
+ -- Tim <tim.j.wilkinson@gmail.com>  Mon, 07 Jun 2021 18:27:30 -0700
+
 qemu-server (6.4-1rpve1) pve; urgency=medium
 
   * Fake man pages
